ARQ-153 Update Servlet protocol to new SPI.
With support for named loading of protocols, Servlet 2.5 and 3.0 has been merged to one module.